// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker :props should have a disabled date: calendar 1`] = `
<div
  class="flatpickr-calendar animate"
  data-rel-data-test="undefined ec-datepicker"
  data-test="ec-datepicker__calendar"
  tabindex="-1"
>
  <div
    class="flatpickr-months"
  >
    <span
      class="flatpickr-prev-month"
    >
      <svg
        version="1.1"
        viewBox="0 0 17 17"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g />
        <path
          d="M5.207 8.471l7.146 7.147-0.707 0.707-7.853-7.854 7.854-7.853 0.707 0.707-7.147 7.146z"
        />
      </svg>
    </span>
    <div
      class="flatpickr-month"
    >
      <div
        class="flatpickr-current-month"
      >
        <select
          aria-label="Month"
          class="flatpickr-monthDropdown-months"
          tabindex="-1"
        >
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="0"
          >
            January
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="1"
          >
            February
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="2"
          >
            March
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="3"
          >
            April
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="4"
          >
            May
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="5"
          >
            June
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="6"
          >
            July
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="7"
          >
            August
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="8"
          >
            September
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="9"
          >
            October
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="10"
          >
            November
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="numInputWrapper"
        >
          <input
            aria-label="Year"
            class="numInput cur-year"
            tabindex="-1"
            type="number"
          />
          <span
            class="arrowUp"
          />
          <span
            class="arrowDown"
          />
        </div>
      </div>
    </div>
    <span
      class="flatpickr-next-month"
    >
      <svg
        version="1.1"
        viewBox="0 0 17 17"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g />
        <path
          d="M13.207 8.472l-7.854 7.854-0.707-0.707 7.146-7.146-7.146-7.148 0.707-0.707 7.854 7.854z"
        />
      </svg>
    </span>
  </div>
  <div
    class="flatpickr-innerContainer"
  >
    <div
      class="flatpickr-rContainer"
    >
      <div
        class="flatpickr-weekdays"
      >
        <div
          class="flatpickr-weekdaycontainer"
        >
          
      
          <span
            class="flatpickr-weekday"
          >
            
        Sun
          </span>
          <span
            class="flatpickr-weekday"
          >
            Mon
          </span>
          <span
            class="flatpickr-weekday"
          >
            Tue
          </span>
          <span
            class="flatpickr-weekday"
          >
            Wed
          </span>
          <span
            class="flatpickr-weekday"
          >
            Thu
          </span>
          <span
            class="flatpickr-weekday"
          >
            Fri
          </span>
          <span
            class="flatpickr-weekday"
          >
            Sat
      
          </span>
          
      
        </div>
      </div>
      <div
        class="flatpickr-days"
        tabindex="-1"
      >
        <div
          class="dayContainer"
        >
          <span
            aria-label="January 30, 2022"
            class="flatpickr-day prevMonthDay"
            data-test="ec-datepicker__calendar-day--2022-01-30"
            tabindex="-1"
          >
            30
          </span>
          <span
            aria-label="January 31, 2022"
            class="flatpickr-day prevMonthDay"
            data-test="ec-datepicker__calendar-day--2022-01-31"
            tabindex="-1"
          >
            31
          </span>
          <span
            aria-label="February 1, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-01"
            tabindex="-1"
          >
            1
          </span>
          <span
            aria-label="February 2, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-02"
            tabindex="-1"
          >
            2
          </span>
          <span
            aria-label="February 3, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-03"
            tabindex="-1"
          >
            3
          </span>
          <span
            aria-label="February 4, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-04"
            tabindex="-1"
          >
            4
          </span>
          <span
            aria-label="February 5, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-05"
            tabindex="-1"
          >
            5
          </span>
          <span
            aria-label="February 6, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-06"
            tabindex="-1"
          >
            6
          </span>
          <span
            aria-label="February 7, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-07"
            tabindex="-1"
          >
            7
          </span>
          <span
            aria-label="February 8, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-08"
            tabindex="-1"
          >
            8
          </span>
          <span
            aria-label="February 9, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-09"
            tabindex="-1"
          >
            9
          </span>
          <span
            aria-label="February 10, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-10"
            tabindex="-1"
          >
            10
          </span>
          <span
            aria-label="February 11, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-11"
            tabindex="-1"
          >
            11
          </span>
          <span
            aria-label="February 12, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-12"
            tabindex="-1"
          >
            12
          </span>
          <span
            aria-label="February 13, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-13"
            tabindex="-1"
          >
            13
          </span>
          <span
            aria-label="February 14, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-14"
            tabindex="-1"
          >
            14
          </span>
          <span
            aria-label="February 15, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-15"
            tabindex="-1"
          >
            15
          </span>
          <span
            aria-label="February 16, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-16"
            tabindex="-1"
          >
            16
          </span>
          <span
            aria-label="February 17, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-17"
            tabindex="-1"
          >
            17
          </span>
          <span
            aria-label="February 18, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-18"
            tabindex="-1"
          >
            18
          </span>
          <span
            aria-label="February 19, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-19"
            tabindex="-1"
          >
            19
          </span>
          <span
            aria-label="February 20, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-20"
            tabindex="-1"
          >
            20
          </span>
          <span
            aria-current="date"
            aria-label="February 21, 2022"
            class="flatpickr-day today"
            data-test="ec-datepicker__calendar-day--2022-02-21"
            tabindex="-1"
          >
            21
          </span>
          <span
            aria-label="February 22, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-22"
            tabindex="-1"
          >
            22
          </span>
          <span
            aria-label="February 23, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-23"
            tabindex="-1"
          >
            23
          </span>
          <span
            aria-label="February 24, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-24"
            tabindex="-1"
          >
            24
          </span>
          <span
            aria-label="February 25, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-25"
            tabindex="-1"
          >
            25
          </span>
          <span
            aria-label="February 26, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-26"
            tabindex="-1"
          >
            26
          </span>
          <span
            aria-label="February 27, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-27"
            tabindex="-1"
          >
            27
          </span>
          <span
            aria-label="February 28, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-28"
            tabindex="-1"
          >
            28
          </span>
          <span
            aria-label="March 1, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-01"
            tabindex="-1"
          >
            1
          </span>
          <span
            aria-label="March 2, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-02"
            tabindex="-1"
          >
            2
          </span>
          <span
            aria-label="March 3, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-03"
            tabindex="-1"
          >
            3
          </span>
          <span
            aria-label="March 4, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-04"
            tabindex="-1"
          >
            4
          </span>
          <span
            aria-label="March 5, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-05"
            tabindex="-1"
          >
            5
          </span>
          <span
            aria-label="March 6, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-06"
            tabindex="-1"
          >
            6
          </span>
          <span
            aria-label="March 7, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-07"
            tabindex="-1"
          >
            7
          </span>
          <span
            aria-label="March 8, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-08"
            tabindex="-1"
          >
            8
          </span>
          <span
            aria-label="March 9, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-09"
            tabindex="-1"
          >
            9
          </span>
          <span
            aria-label="March 10, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-10"
            tabindex="-1"
          >
            10
          </span>
          <span
            aria-label="March 11, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-11"
            tabindex="-1"
          >
            11
          </span>
          <span
            aria-label="March 12, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-12"
            tabindex="-1"
          >
            12
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker :props should have a disabled weekends: calendar 1`] = `
<div
  class="flatpickr-calendar animate"
  data-rel-data-test="undefined ec-datepicker"
  data-test="ec-datepicker__calendar"
  tabindex="-1"
>
  <div
    class="flatpickr-months"
  >
    <span
      class="flatpickr-prev-month"
    >
      <svg
        version="1.1"
        viewBox="0 0 17 17"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g />
        <path
          d="M5.207 8.471l7.146 7.147-0.707 0.707-7.853-7.854 7.854-7.853 0.707 0.707-7.147 7.146z"
        />
      </svg>
    </span>
    <div
      class="flatpickr-month"
    >
      <div
        class="flatpickr-current-month"
      >
        <select
          aria-label="Month"
          class="flatpickr-monthDropdown-months"
          tabindex="-1"
        >
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="0"
          >
            January
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="1"
          >
            February
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="2"
          >
            March
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="3"
          >
            April
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="4"
          >
            May
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="5"
          >
            June
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="6"
          >
            July
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="7"
          >
            August
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="8"
          >
            September
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="9"
          >
            October
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="10"
          >
            November
          </option>
          <option
            class="flatpickr-monthDropdown-month"
            tabindex="-1"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="numInputWrapper"
        >
          <input
            aria-label="Year"
            class="numInput cur-year"
            tabindex="-1"
            type="number"
          />
          <span
            class="arrowUp"
          />
          <span
            class="arrowDown"
          />
        </div>
      </div>
    </div>
    <span
      class="flatpickr-next-month"
    >
      <svg
        version="1.1"
        viewBox="0 0 17 17"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g />
        <path
          d="M13.207 8.472l-7.854 7.854-0.707-0.707 7.146-7.146-7.146-7.148 0.707-0.707 7.854 7.854z"
        />
      </svg>
    </span>
  </div>
  <div
    class="flatpickr-innerContainer"
  >
    <div
      class="flatpickr-rContainer"
    >
      <div
        class="flatpickr-weekdays"
      >
        <div
          class="flatpickr-weekdaycontainer"
        >
          
      
          <span
            class="flatpickr-weekday"
          >
            
        Sun
          </span>
          <span
            class="flatpickr-weekday"
          >
            Mon
          </span>
          <span
            class="flatpickr-weekday"
          >
            Tue
          </span>
          <span
            class="flatpickr-weekday"
          >
            Wed
          </span>
          <span
            class="flatpickr-weekday"
          >
            Thu
          </span>
          <span
            class="flatpickr-weekday"
          >
            Fri
          </span>
          <span
            class="flatpickr-weekday"
          >
            Sat
      
          </span>
          
      
        </div>
      </div>
      <div
        class="flatpickr-days"
        tabindex="-1"
      >
        <div
          class="dayContainer"
        >
          <span
            aria-label="January 30, 2022"
            class="flatpickr-day prevMonthDay flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-01-30"
            tabindex="-1"
          >
            30
          </span>
          <span
            aria-label="January 31, 2022"
            class="flatpickr-day prevMonthDay"
            data-test="ec-datepicker__calendar-day--2022-01-31"
            tabindex="-1"
          >
            31
          </span>
          <span
            aria-label="February 1, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-01"
            tabindex="-1"
          >
            1
          </span>
          <span
            aria-label="February 2, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-02"
            tabindex="-1"
          >
            2
          </span>
          <span
            aria-label="February 3, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-03"
            tabindex="-1"
          >
            3
          </span>
          <span
            aria-label="February 4, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-04"
            tabindex="-1"
          >
            4
          </span>
          <span
            aria-label="February 5, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-05"
            tabindex="-1"
          >
            5
          </span>
          <span
            aria-label="February 6, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-06"
            tabindex="-1"
          >
            6
          </span>
          <span
            aria-label="February 7, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-07"
            tabindex="-1"
          >
            7
          </span>
          <span
            aria-label="February 8, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-08"
            tabindex="-1"
          >
            8
          </span>
          <span
            aria-label="February 9, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-09"
            tabindex="-1"
          >
            9
          </span>
          <span
            aria-label="February 10, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-10"
            tabindex="-1"
          >
            10
          </span>
          <span
            aria-label="February 11, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-11"
            tabindex="-1"
          >
            11
          </span>
          <span
            aria-label="February 12, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-12"
            tabindex="-1"
          >
            12
          </span>
          <span
            aria-label="February 13, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-13"
            tabindex="-1"
          >
            13
          </span>
          <span
            aria-label="February 14, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-14"
            tabindex="-1"
          >
            14
          </span>
          <span
            aria-label="February 15, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-15"
            tabindex="-1"
          >
            15
          </span>
          <span
            aria-label="February 16, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-16"
            tabindex="-1"
          >
            16
          </span>
          <span
            aria-label="February 17, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-17"
            tabindex="-1"
          >
            17
          </span>
          <span
            aria-label="February 18, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-18"
            tabindex="-1"
          >
            18
          </span>
          <span
            aria-label="February 19, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-19"
            tabindex="-1"
          >
            19
          </span>
          <span
            aria-label="February 20, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-20"
            tabindex="-1"
          >
            20
          </span>
          <span
            aria-current="date"
            aria-label="February 21, 2022"
            class="flatpickr-day today"
            data-test="ec-datepicker__calendar-day--2022-02-21"
            tabindex="-1"
          >
            21
          </span>
          <span
            aria-label="February 22, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-22"
            tabindex="-1"
          >
            22
          </span>
          <span
            aria-label="February 23, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-23"
            tabindex="-1"
          >
            23
          </span>
          <span
            aria-label="February 24, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-24"
            tabindex="-1"
          >
            24
          </span>
          <span
            aria-label="February 25, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-25"
            tabindex="-1"
          >
            25
          </span>
          <span
            aria-label="February 26, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-26"
            tabindex="-1"
          >
            26
          </span>
          <span
            aria-label="February 27, 2022"
            class="flatpickr-day  flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-02-27"
            tabindex="-1"
          >
            27
          </span>
          <span
            aria-label="February 28, 2022"
            class="flatpickr-day "
            data-test="ec-datepicker__calendar-day--2022-02-28"
            tabindex="-1"
          >
            28
          </span>
          <span
            aria-label="March 1, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-01"
            tabindex="-1"
          >
            1
          </span>
          <span
            aria-label="March 2, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-02"
            tabindex="-1"
          >
            2
          </span>
          <span
            aria-label="March 3, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-03"
            tabindex="-1"
          >
            3
          </span>
          <span
            aria-label="March 4, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-04"
            tabindex="-1"
          >
            4
          </span>
          <span
            aria-label="March 5, 2022"
            class="flatpickr-day nextMonthDay flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-03-05"
            tabindex="-1"
          >
            5
          </span>
          <span
            aria-label="March 6, 2022"
            class="flatpickr-day nextMonthDay flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-03-06"
            tabindex="-1"
          >
            6
          </span>
          <span
            aria-label="March 7, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-07"
            tabindex="-1"
          >
            7
          </span>
          <span
            aria-label="March 8, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-08"
            tabindex="-1"
          >
            8
          </span>
          <span
            aria-label="March 9, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-09"
            tabindex="-1"
          >
            9
          </span>
          <span
            aria-label="March 10, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-10"
            tabindex="-1"
          >
            10
          </span>
          <span
            aria-label="March 11, 2022"
            class="flatpickr-day nextMonthDay"
            data-test="ec-datepicker__calendar-day--2022-03-11"
            tabindex="-1"
          >
            11
          </span>
          <span
            aria-label="March 12, 2022"
            class="flatpickr-day nextMonthDay flatpickr-disabled"
            data-test="ec-datepicker__calendar-day--2022-03-12"
            tabindex="-1"
          >
            12
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker :props should render as disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    disabled="disabled"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--is-disabled"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a bottom note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__bottom-note"
    data-test="ec-input-field__bottom-note"
  >
    Datepicker bottom note
  </div>
</div>
`;

exports[`Datepicker :props should render with a bottom note in a warning state 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__bottom-note ec-input-field__bottom-note--is-warning"
    data-test="ec-input-field__bottom-note"
  >
    Datepicker bottom note
  </div>
</div>
`;

exports[`Datepicker :props should render with a label 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="datepicker-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      Datepicker label
      <!---->
    </span>
     
    <!---->
  </label>
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="datepicker-1"
  >
    <!---->
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      Datepicker note
    </span>
  </label>
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a placeholder 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    placeholder="Datepicker placeholder"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with an error message 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    aria-describedby="ec-input-field-error-2"
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-error ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="ec-input-field-error-2"
  >
    A random error message
  </div>
</div>
`;

exports[`Datepicker should render properly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;
